syntax = "proto3";

package techcubing;

option java_package = "com.techcubing.proto";
option java_outer_classname = "OptionsProto";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  // The name of the mysql table in which this message should be stored.
  string mysql_table_name = 5000;
}

extend google.protobuf.FieldOptions {
  // If true, this field should be used as the primary key for this entity.
  bool primary_key = 5000;

  // If true, this field is a reference to the entity's parent in WCIF.
  bool parent_ref = 5001;

  // If set, the type of field that this field is an ID for.
  string message_type = 5002;

  // If set, this field should be populated with IDs for another field.
  string id_for = 5003;

  // If set, the name of the mysql column that should store this field.
  string mysql_column_name = 5004;
}
