syntax = "proto3";

package techcubing;

option java_package = "com.techcubing.proto";
option java_outer_classname = "WcaEnvironmentProto";

enum WcaEnvironment {
  UNKNOWN_ENVIRONMENT = 0;
  PROD = 1;
  STAGING = 2;
  DEV = 3;
}
